// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders component correctly 1`] = `
<div>
  <div
    class="mainContainer"
  >
    <div>
      <div
        class="container"
      >
        <div>
          <div>
            <a
              class="home-btn"
              href="/"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 320 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="year"
        >
           2023
        </div>
        <div
          class="title"
        >
          Crypto Coins
        </div>
        <div
          class="searchBox"
        >
          <input
            class="searchInput"
            placeholder="Search..."
            type="text"
          />
        </div>
        <div>
          <button
            aria-label="Mute volume"
            class="searchButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="coinItems"
    >
      <div
        class="main"
      >
        <ul
          class="homeCoinList"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Craypto Home page 1`] = `
<div
  className="mainContainer"
>
  <div>
    <div
      className="container"
    >
      <div>
        <div>
          <a
            className="home-btn"
            href="/"
            onClick={[Function]}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="year"
      >
         2023
      </div>
      <div
        className="title"
      >
        Crypto Coins
      </div>
      <div
        className="searchBox"
      >
        <input
          className="searchInput"
          onChange={[Function]}
          placeholder="Search..."
          type="text"
        />
      </div>
      <div>
        <button
          aria-label="Mute volume"
          className="searchButton"
          onChange={[Function]}
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="coinItems"
  >
    <div
      className="main"
    >
      <ul
        className="homeCoinList"
      />
    </div>
  </div>
</div>
`;
